--- a/main.bib
+++ b/main.bib
@@ -53,23 +53,23 @@
   url     = {https://doi.org/10.1038/nmeth.4499}
 }
 
-@MastersThesis{schindler2019thesis,
-AUTHOR = "Schindler, Ondřej",
-TITLE = "Empirické metody pro výpočet parciálních atomových nábojů [online]",
-YEAR = "2019 [cit. 2023-05-15]",
-TYPE = "Master's thesis",
-SCHOOL = "Masaryk University, Faculty of Science, Brno",
-NOTE = "SUPERVISOR : Tomáš Raček, Radka Svobodová",
-URL = "https://is.muni.cz/th/ts2kg/",
+@mastersthesis{schindler2019thesis,
+  author = {Schindler, Ondřej},
+  title  = {Empirické metody pro výpočet parciálních atomových nábojů [online]},
+  year   = {2019 [cit. 2023-05-15]},
+  type   = {Master's thesis},
+  school = {Masaryk University, Faculty of Science, Brno},
+  note   = {SUPERVISOR : Tomáš Raček, Radka Svobodová},
+  url    = {https://is.muni.cz/th/ts2kg/}
 }
 
 @misc{schindler2021thesis,
-AUTHOR = "Schindler, Ondřej",
-TITLE = "Parciální atomové náboje peptidů [online]",
-YEAR = "2021 [cit. 2023-05-15]",
-TYPE = "Advanced Master's thesis",
-SCHOOL = "Masaryk University, Faculty of Science, Brno",
-URL = "https://is.muni.cz/th/yzf1j/",
+  author = {Schindler, Ondřej},
+  title  = {Parciální atomové náboje peptidů [online]},
+  year   = {2021 [cit. 2023-05-15]},
+  type   = {Advanced Master's thesis},
+  school = {Masaryk University, Faculty of Science, Brno},
+  url    = {https://is.muni.cz/th/yzf1j/}
 }
 
 @article{wojdyr2022gemmi,
@@ -294,39 +294,40 @@ URL = "https://is.muni.cz/th/yzf1j/",
   publisher = {John Wiley \& Sons}
 }
 
-@misc{mmcif_dictionary,
-  url     = {https://mmcif.wwpdb.org/},
-  journal = {PDBx/mmCIF Dictionary Resources}
-} 
-
 @book{gupta2015principles,
-  title={Principles and applications of quantum chemistry},
-  author={Gupta, VP},
-  year={2015},
-  publisher={Academic Press}
+  title     = {Principles and applications of quantum chemistry},
+  author    = {Gupta, VP},
+  year      = {2015},
+  publisher = {Academic Press}
 }
 
-@PhdThesis{racek2022thesis,
-AUTHOR = "Raček, Tomáš",
-TITLE = "Empirical methods for calculating partial atomic charges [online]",
-YEAR = "2022 [cit. 2023-05-15]",
-TYPE = "Doctoral theses, Dissertations",
-SCHOOL = "Masaryk University, Faculty of Informatics, Brno",
-NOTE = "SUPERVISOR : Luděk Matyska",
-URL = "https://is.muni.cz/th/gy8gf/",
+@phdthesis{racek2022thesis,
+  author = {Raček, Tomáš},
+  title  = {Empirical methods for calculating partial atomic charges [online]},
+  year   = {2022 [cit. 2023-05-15]},
+  type   = {Doctoral theses, Dissertations},
+  school = {Masaryk University, Faculty of Informatics, Brno},
+  note   = {SUPERVISOR : Luděk Matyska},
+  url    = {https://is.muni.cz/th/gy8gf/}
 }
 
 @article{pernaa2017introduction,
-  title={Introduction to Molecular Modeling in Chemistry Education},
-  author={Pernaa, Johannes and Aksela, Maija and Ghulam, Shenelle Pearl},
-  year={2017},
-  publisher={e-Oppi}
+  title     = {Introduction to Molecular Modeling in Chemistry Education},
+  author    = {Pernaa, Johannes and Aksela, Maija and Ghulam, Shenelle Pearl},
+  year      = {2017},
+  publisher = {e-Oppi}
 }
 
 @online{zucconi2016secrets,
-  author = {Zucconi, Alan},
-  title = {The secrets of colour interpolation},
-  year = "2016 [cit. 2023-05-14]",
-  url = {http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm},
-  urldate = {2010-09-30}
+  author  = {Zucconi, Alan},
+  title   = {The secrets of colour interpolation},
+  url     = {https://www.alanzucconi.com/2016/01/06/colour-interpolation/},
+  urldate = {2023-05-14}
 }
+
+@online{mmcif_dictionary,
+  author  = {wwPDB},
+  title   = {PDBx/mmCIF Dictionary Resources},
+  url     = {https://mmcif.wwpdb.org/},
+  urldate = {2023-05-14}
+} 
