--- a/main.bib
+++ b/main.bib
@@ -331,3 +331,69 @@
   url     = {https://mmcif.wwpdb.org/},
   urldate = {2023-05-14}
 } 
+
+@article{katritzky1996quantum,
+  author  = {Karelson, Mati and Lobanov, Victor S. and Katritzky, Alan R.},
+  title   = {Quantum-Chemical Descriptors in QSAR/QSPR Studies},
+  journal = {Chemical Reviews},
+  volume  = {96},
+  number  = {3},
+  pages   = {1027-1044},
+  year    = {1996},
+  doi     = {10.1021/cr950202r},
+  note    = {PMID: 11848779},
+  url     = { 
+             https://doi.org/10.1021/cr950202r
+             },
+  eprint  = { 
+             https://doi.org/10.1021/cr950202r
+             }
+}
+
+@article{park2006critical,
+  title     = {Critical assessment of the automated AutoDock as a new docking tool for virtual screening},
+  author    = {Park, Hwangseo and Lee, Jinuk and Lee, Sangyoub},
+  journal   = {Proteins: Structure, Function, and Bioinformatics},
+  volume    = {65},
+  number    = {3},
+  pages     = {549--554},
+  year      = {2006},
+  publisher = {Wiley Online Library}
+}
+
+@article{stalke2011meaningful,
+  title     = {Meaningful structural descriptors from charge density},
+  author    = {Stalke, Dietmar},
+  journal   = {Chemistry--A European Journal},
+  volume    = {17},
+  number    = {34},
+  pages     = {9264--9278},
+  year      = {2011},
+  publisher = {Wiley Online Library}
+}
+
+@article{nejad2018insulin,
+  title     = {Insulin adsorption on functionalized silica surfaces: an accelerated molecular dynamics study},
+  author    = {Nejad, Marjan A and Urbassek, Herbert M},
+  journal   = {Journal of Molecular Modeling},
+  volume    = {24},
+  number    = {4},
+  pages     = {89},
+  year      = {2018},
+  publisher = {Springer}
+}
+
+@article{tysl2014psilocybin,
+  title    = {Psilocybin – Summary of knowledge and new perspectives},
+  journal  = {European Neuropsychopharmacology},
+  volume   = {24},
+  number   = {3},
+  pages    = {342-356},
+  year     = {2014},
+  issn     = {0924-977X},
+  doi      = {https://doi.org/10.1016/j.euroneuro.2013.12.006},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0924977X13003519},
+  author   = {Filip Tylš and Tomáš Páleníček and Jiří Horáček},
+  keywords = {Psilocybin, Hallucinogens, Psychedelics, Hallucinogenic mushrooms, Pharmacology, Neurobiology, Serotonin, 5-HT2 receptors, 5-HT1 receptors, Brain imaging, Psychological measures, Behavioral studies},
+  abstract = {Psilocybin, a psychoactive alkaloid contained in hallucinogenic mushrooms, is nowadays given a lot of attention in the scientific community as a research tool for modeling psychosis as well as due to its potential therapeutic effects. However, it is also a very popular and frequently abused natural hallucinogen. This review summarizes all the past and recent knowledge on psilocybin. It briefly deals with its history, discusses the pharmacokinetics and pharmacodynamics, and compares its action in humans and animals. It attempts to describe the mechanism of psychedelic effects and objectify its action using modern imaging and psychometric methods. Finally, it describes its therapeutic and abuse potential.}
+}
