--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -223,27 +223,29 @@ When two atoms of a molecule form a chemical bond, they share electrons. However
 
 Partial atomic charges are numerical values assigned to individual atoms within a molecule, representing their contribution to the distribution of electron density. Atoms with higher electronegativities have a partial negative charge (denoted as $\delta-$), while atoms with lower electronegativities have a partial positive charge (denoted as $\delta+$). \cite{racek2022thesis} 
 
-Figure \ref{fig:psilocybine} demonstrates the unequal distribution of electron density in psilocybine, a psychedelic compound found in certain species of mushrooms. The figure shows the partial atomic charges of psilocybine colored by their values. The partial negative charges are colored red, while the partial positive charges are colored blue.
+Figure \ref{fig:psilocybin} demonstrates the unequal distribution of electron density in psilocybin, a psychedelic compound found in certain species of mushrooms. \cite{tysl2014psilocybin} The figure shows the partial atomic charges of psilocybin colored by their values. The partial negative charges are colored red, while the partial positive charges are colored blue.
 
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=10cm]{figures/psilocybine.png}
   \end{center}
-  \caption{Partial atomic charges of psilocybine.}
-  \label{fig:psilocybine}
+  \caption{Partial atomic charges of psilocybin.}
+  \label{fig:psilocybin}
 \end{figure}
 
-There are several applications for partial atomic charges in computational chemistry, such as molecular dynamics, molecular docking, and pharmacophore design. \cite{racek2022thesis}
+There are several applications for partial atomic charges in computational chemistry, such as molecular dynamics \cite{nejad2018insulin}, molecular docking \cite{park2006critical}, and pharmacophore design \cite{stalke2011meaningful}. \cite{schindler2021thesis}
+
+It is important to note that partial charges are simply a theoretical concept and cannot be directly measured or observed; they can only be calculated using computational methods. \cite{schindler2019thesis} 
 
 \subsection{Calculating partial atomic charges}
 
-It is important to note that partial charges are simply a theoretical concept and cannot be directly measured or observed; they can only be calculated using computational methods. \cite{schindler2019thesis} One approach for calculating partial atomic charges is by quantum mechanical methods. However, these methods are computationally expensive and require a lot of computational resources. Another approach is by empirical methods, which are less accurate but faster and more efficient than quantum mechanical methods. \cite{racek2022thesis}
+One approach for calculating partial atomic charges is by quantum mechanical methods \cite{gupta2015principles}. However, these methods are computationally expensive and require a lot of computational resources. Another approach is by empirical methods.
 
-Empirical methods are an efficient alternative to quantum mechanical methods, which operate at the atomic level rather than directly considering individual electrons or molecular orbitals. These methods aim to produce charges that are comparable to those obtained through quantum mechanical methods while keeping the computational complexity manageable. \cite{racek2022thesis}
+Empirical methods aim to produce charges that are comparable to those obtained through quantum mechanical methods while keeping the computational complexity manageable. Empirical methods can contain a variety of parameters, such as bond lengths, bond angles, and atomic charges. These parameters are typically derived from experimental data or quantum mechanical calculations. \cite{racek2022thesis}
 
-Empirical methods can contain a variety of parameters, such as bond lengths, bond angles, and atomic charges. These parameters are typically derived from experimental data or quantum mechanical calculations. \cite{racek2022thesis}
+There are several empirical methods for calculating partial atomic charges, such as SQE, EEM, and EQeq. \cite{schindler2021sqe} These methods are implemented in the ChargeFW2 \cite{racek2022thesis} program, which is used in this thesis.
 
-ChargeFW2 is a C++ application that calculates partial atomic charges using empirical methods. It provides several different methods for calculating partial atomic charges, such as . Additionally, it provides other 
+ChargeFW2 is a C++ program that calculates partial atomic charges by empirical methods. The program supports over 20 empirical methods, including SQE, EEM, and EQeq. It provides a command-line interface for running calculations and supports several file formats for input and output. \cite{racek2022thesis}
 
 \section{Chemical file formats}
 \label{section:chemical_file_formats}
